--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -9,15 +9,21 @@ distlib==0.3.0
 distro==1.4.0
 dj-database-url==0.5.0
 Django==3.1.6
+django-jinja==2.7.0
 django-on-heroku==1.1.2
+djangorestframework==3.12.4
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
+Jinja2==2.11.3
 lockfile==0.12.2
+Markdown==2.6.8
+MarkupSafe==1.1.1
 msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
+Pillow==8.1.1
 progress==1.5
 psycopg2-binary==2.8.6
 pyparsing==2.4.6
@@ -30,4 +36,3 @@ sqlparse==0.4.1
 urllib3==1.25.8
 webencodings==0.5.1
 whitenoise==5.2.0
-pillow==8.1.1
