--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -12,6 +12,8 @@ Django==3.1.6
 django-jinja==2.7.0
 django-on-heroku==1.1.2
 djangorestframework==3.12.4
+django-markdownx==3.0.1
+django-bootstrap4==2.3.1
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
